<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_green"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:background="@drawable/bg_dialog"
            android:elevation="24dp"
            android:orientation="vertical"
            android:paddingHorizontal="17dp"
            android:paddingTop="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@string/hello_username"
                android:textAlignment="center"
                android:textColor="@color/secondary_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginEnd="11dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:id="@+id/btnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_image_selector"
                    android:elevation="4dp"
                    android:minWidth="50dp"
                    android:minHeight="50dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/maleicon" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnFemale"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="15dp"
                    android:layout_marginEnd="29dp"
                    android:background="@drawable/bg_image_selector"
                    android:elevation="4dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:src="@drawable/femaleicon" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_weight="1"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clAge"
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="29dp"
                    android:background="@drawable/bg_spinner">

                    <TextView
                        android:id="@+id/tvAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="italic|bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="_ _" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="4.5dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12.5dp"
                        android:src="@drawable/ic_arrow_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                style="@style/AppButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:text="@string/next" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>